--- a/Automatic_Detection_of_Sexist_Statements_Commonly_Used_at_the_Workplace-master/Automatic_Detection_of_Sexist_Statements_Commonly_Used_at_the_Workplace-master/requirements.txt
+++ b/Automatic_Detection_of_Sexist_Statements_Commonly_Used_at_the_Workplace-master/Automatic_Detection_of_Sexist_Statements_Commonly_Used_at_the_Workplace-master/requirements.txt
@@ -1,13 +1,13 @@
 absl-py==0.3.0
 alabaster==0.7.10
-anaconda-client==1.6.14
-anaconda-navigator==1.8.7
-anaconda-project==0.8.2
+#anaconda-client==1.6.14
+#anaconda-navigator==1.8.7
+#anaconda-project==0.8.2
 appnope==0.1.0
 asn1crypto==0.24.0
 astor==0.7.1
 astroid==1.6.3
-astropy==3.0.2
+#astropy==3.0.2
 attrs==18.1.0
 audioread==2.1.6
 Babel==2.5.3
@@ -17,7 +17,7 @@ beautifulsoup4==4.6.0
 bert-embedding==1.0.1
 bitarray==0.8.1
 bkcharts==0.2
-blaze==0.11.3
+blaze
 bleach==3.0.2
 bokeh==0.12.16
 boto==2.48.0
@@ -30,21 +30,21 @@ cffi==1.11.5
 chardet==3.0.4
 Click==7.0
 cloudpickle==0.5.3
-clyent==1.2.2
+clyent==1.2.1
 colorama==0.3.9
 comtypes==1.1.4
-conda==4.8.1
-conda-build==3.10.5
-conda-package-handling==1.3.11
-conda-verify==2.0.0
-contextlib2==0.5.5
+conda
+conda-build
+#conda-package-handling
+#conda-verify
+contextlib2
 contractions==0.0.18
 cryptography==2.7
 cycler==0.10.0
 Cython==0.28.2
 cytoolz==0.9.0.1
 dask==0.17.5
-datashape==0.5.4
+datashape==0.5.2
 decorator==4.3.0
 defusedxml==0.5.0
 distributed==1.21.8
@@ -106,28 +106,28 @@ kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
 libarchive-c==2.8
 librosa==0.6.2
-llvmlite==0.23.1
+llvmlite==0.23.2
 locket==0.2.0
 lxml==4.2.1
 magenta==0.3.12
 Markdown==2.6.11
-MarkupSafe==1.0
-matplotlib==2.2.2
+#MarkupSafe==1.0
+matplotlib
 mccabe==0.6.1
-menuinst==1.4.14
+#menuinst==1.4.14
 mido==1.2.6
 mir-eval==0.4
 mistune==0.8.3
-mkl-fft==1.0.0
-mkl-random==1.0.1
-mkl-service==2.0.2
+mkl-fft
+mkl-random
+mkl-service
 more-itertools==4.1.0
 mpmath==1.0.0
 msgpack-python==0.5.6
 multipledispatch==0.5.0
 music21==5.3.0
 mxnet==1.4.0
-navigator-updater==0.2.1
+#navigator-updater==0.2.1
 nbconvert==5.3.1
 nbformat==4.4.0
 networkx==2.1
@@ -140,7 +140,7 @@ numpy==1.14.6
 numpydoc==0.8.0
 oauth2client==4.1.3
 oauthlib==3.0.1
-odo==0.5.1
+odo
 olefile==0.45.1
 openpyxl==2.5.3
 packaging==17.1
@@ -169,7 +169,7 @@ pycodestyle==2.4.0
 pycosat==0.6.3
 pycparser==2.18
 pycrypto==2.6.1
-pycurl==7.43.0.3
+#pycurl==7.44.1
 pydot==1.4.1
 pyflakes==1.6.0
 Pygments==2.2.0
@@ -185,11 +185,11 @@ pytest-doctestplus==0.1.3
 pytest-openfiles==0.3.0
 pytest-remotedata==0.2.1
 python-dateutil==2.7.3
-python-rtmidi===1.1.1.dev0.dev
+python-rtmidi
 python-twitter==3.5
 pytz==2018.4
 PyWavelets==0.5.2
-pywin32==223
+pywin32
 pywinpty==0.5.1
 PyYAML==3.12
 pyzmq==17.0.0
@@ -201,7 +201,7 @@ requests-oauthlib==1.2.0
 resampy==0.2.1
 rope==0.10.7
 rsa==4.0
-ruamel-yaml==0.15.35
+ruamel-yaml
 s3transfer==0.2.0
 scikit-image==0.13.1
 scikit-learn==0.21.2
@@ -225,18 +225,18 @@ spyder==3.2.8
 SQLAlchemy==1.2.7
 statsmodels==0.9.0
 sympy==1.1.1
-tables==3.4.3
+#tables
 tabula-py==1.3.1
 tblib==1.3.2
 tensorboard==1.9.0
-tensorflow==1.9.0
+tensorflow
 termcolor==1.1.0
 terminado==0.8.1
 testpath==0.3.1
 text-unidecode==1.2
 toolz==0.9.0
-torch==1.4.0
-torchvision==0.5.0
+torch
+torchvision
 tornado==5.0.2
 tqdm==4.31.1
 traitlets==4.3.2
